[package]
name = "fhttp"
version = "0.1.0"
authors = ["René Perschon <rperschon85@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.0", features = ["default-tls", "blocking"] }
regex = "1"
lazy_static = "1.4.0"
indoc = "0.3.4"
jsonpath_lib = "0.2.3"
serde = "1.0.104"
serde_json = "1.0.44"
clap = "2.33.0"
promptly = "0.2.0"
maplit = "1.0.2"
