[workspace]
resolver = "2"

members = ["fhttp", "fhttp-core", "fhttp-test-utils"]

[workspace.dependencies]
indoc = "2.0"
mockito = "1.7"
wiremock = "0.6"
wiremock-multipart = "1.0"
async-std = { version = "1.13", features = ["attributes"] }
assert_cmd = "2.0"
predicates = "3.1"
temp-dir = "0.1.16"
serde_json = "1.0"
rstest = "0.25"
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "blocking",
    "multipart",
] }
serde = "1.0"
serde_yaml = "0.9"
jsonpath_lib = "0.3"
regex = "1.11"
lazy-regex = "3.4"
promptly = "0.3"
uuid = { version = "1.17", features = ["v4"] }
rand = "0.9"
apply = "0.3.0"
pest = "2.8"
pest_derive = "2.8"
anyhow = "1.0"
itertools = "0.14"
recursive-file-loader = "1.0"
linked_hash_set = "0.1"
maplit = "1.0"
