[package]
name = "fhttp-core"
version = "2.0.0"
authors = ["René Perschon <rene.perschon@akelius.de>"]
edition = "2021"
license = "MIT"
description = "core library for the fhttp tool"
homepage = "https://github.com/Leopard2A5/fhttp"
documentation = "https://docs.rs/fhttp-core"
repository = "https://github.com/Leopard2A5/fhttp"
readme = "../README.asciidoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = [
    "rustls-tls",
    "blocking",
    "multipart",
] }

serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.33"
jsonpath_lib = "0.3.0"
regex = "1.6"
lazy-regex = "3.1.0"
promptly = "0.3.0"
uuid = { version = "1.8.0", features = ["v4"] }
rand = "0.8.5"
apply = "0.3.0"
pest = "2.1.3"
pest_derive = "2.1.0"
anyhow = "1.0"
itertools = "0.12.1"
recursive-file-loader = "1.0.3"

[dev-dependencies]
indoc = "2.0.5"
maplit = "1.0.2"
async-std = "1.10"
wiremock = "0.5"
wiremock-multipart = "0.1"
rstest = "0.19.0"
temp-dir = "0.1.11"
