[package]
name = "fhttp-core"
version = "2.1.0"
authors = ["René Perschon <rene.perschon@akelius.de>"]
edition = "2021"
license = "MIT"
description = "core library for the fhttp tool"
homepage = "https://github.com/Leopard2A5/fhttp"
documentation = "https://docs.rs/fhttp-core"
repository = "https://github.com/Leopard2A5/fhttp"
readme = "../README.asciidoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
jsonpath_lib.workspace = true
pest_derive.workspace = true
linked_hash_set.workspace = true
lazy-regex.workspace = true
recursive-file-loader.workspace = true
regex.workspace = true
promptly.workspace = true
rand.workspace = true
pest.workspace = true
anyhow.workspace = true
uuid.workspace = true

[dev-dependencies]
apply.workspace = true
indoc.workspace = true
maplit.workspace = true
async-std.workspace = true
wiremock.workspace = true
wiremock-multipart.workspace = true
rstest.workspace = true
temp-dir.workspace = true
