[package]
name = "fhttp"
version = "1.6.0"
authors = ["René Perschon <rperschon85@gmail.com>"]
edition = "2021"
license = "MIT"
description = "File-based command line http client"
homepage = "https://github.com/Leopard2A5/fhttp"
documentation = "https://github.com/Leopard2A5/fhttp"
repository = "https://github.com/Leopard2A5/fhttp"
readme = "../README.asciidoc"

[dependencies]
fhttp-core = { version = "1.6.0", path = "../fhttp-core" }
clap = { version = "4.0.14", features = ["derive", "env"] }
itertools = "0.10"
anyhow = "1.0"

[dev-dependencies]
maplit = "1.0.2"
indoc = "1.0.3"
mockito = "0.23.3"
wiremock = "0.5"
async-std = "1.10"
assert_cmd = "1.0.1"
reqwest = { version = "0.10.6", features = ["rustls-tls", "blocking"] }
