[package]
name = "fhttp"
version = "2.0.0"
authors = ["René Perschon <rperschon85@gmail.com>"]
edition = "2021"
license = "MIT"
description = "File-based command line http client"
homepage = "https://github.com/Leopard2A5/fhttp"
documentation = "https://github.com/Leopard2A5/fhttp"
repository = "https://github.com/Leopard2A5/fhttp"
readme = "../README.asciidoc"

[dependencies]
fhttp-core = { version = "2.0.0", path = "../fhttp-core" }
clap = { version = "4.0.14", features = ["derive", "env"] }
itertools = "0.12.1"
anyhow = "1.0"

[dev-dependencies]
maplit = "1.0.2"
indoc = "2.0.5"
mockito = "1.4.0"
wiremock = "0.6.0"
async-std = { version = "1.10", features = ["attributes"] }
assert_cmd = "2.0.14"
predicates = "3.0.1"
reqwest = { version = "0.12.3", features = ["rustls-tls", "blocking"] }
temp-dir = "0.1.11"
serde_json = "1.0.91"
rstest = "0.19.0"
fhttp-test-utils = { path = "../fhttp-test-utils", version = "2.0.0" }
