[package]
name = "fhttp"
version = "2.1.0"
authors = ["René Perschon <rperschon85@gmail.com>"]
edition = "2021"
license = "MIT"
description = "File-based command line http client"
homepage = "https://github.com/Leopard2A5/fhttp"
documentation = "https://github.com/Leopard2A5/fhttp"
repository = "https://github.com/Leopard2A5/fhttp"
readme = "../README.asciidoc"

[dependencies]
fhttp-core = { version = "2.1.0", path = "../fhttp-core" }
clap = { version = "4.0.14", features = ["derive", "env"] }
itertools = "0.14.0"
anyhow = "1.0"

[dev-dependencies]
fhttp-test-utils = { path = "../fhttp-test-utils" }
indoc.workspace = true
mockito.workspace = true
wiremock.workspace = true
predicates.workspace = true
reqwest.workspace = true
rstest.workspace = true
serde_json.workspace = true
temp-dir.workspace = true
assert_cmd.workspace = true
async-std.workspace = true
